# argus

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARGUS_MASTER_EXTRACTION_CHECKLIST.md  EXTRACTION_GAP_FIX_SPECIFICATION.md  FORENSIC_EXTRACTOR_GUIDE.md  README.md  SPEC.md  SPEC_v1.1.md  pyproject.toml  requirements.txt
improvement/: comparator.py  fix_generator.py  runner.py
improvement/cases/_template/: answer_key_template.json
src/argus/: __init__.py  __main__.py  banner.py  cli.py  config.py
src/argus/agents/: __init__.py  analysis_agents.py  base.py  hypothesis_agent.py  investigation_playbooks.py  triage_agents.py
src/argus/deobfuscate/: __init__.py  emulation.py  llm.py  pipeline.py  safety.py  static.py
src/argus/extraction/: __init__.py  orchestrator.py  stage1_fields.py  stage2_decoding.py  stage3_relationships.py  stage4_patterns.py  stage5_anomalies.py  stage6_context.py  stage7_assembly.py
src/argus/extraction/baselines/: event_id_db.yaml  mitre_detections.yaml  process_parents.yaml
src/argus/extraction/tests/: test_extraction.py
src/argus/extractors/: __init__.py  constants.py  forensic_extractor.py
src/argus/parsers/: __init__.py  base.py  browser.py  cisco.py  csv_parser.py  defender.py  detector.py  evtx.py  excel.py  firewall.py  generator.py  haproxy.py  iis.py  jsonl.py  memory.py  o365.py  okta.py  paloalto.py  pcap.py  pe.py  prefetch.py  proxy.py  registry.py  script.py  shimcache.py  suricata.py  syslog.py  usn.py  vpcflow.py  weblog.py  zeek.py
src/argus/parsers/cloud/: __init__.py  azure_ad.py  cloudtrail.py  gcp.py
src/argus/phases/: __init__.py  phase0_init.py  phase1_ingest.py  phase2_triage.py  phase3_analysis.py  phase4_validation.py  phase5_ioc.py  phase6_detection.py  phase7_report.py  phase8_package.py
